compiler/testData/diagnostics/tests/regressions/ea43298.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
import A.<!SYNTAX!><!>;

class A
